--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ env:
     - GRAVIS="https://raw.githubusercontent.com/DanySK/Gravis-CI/master/"
     - PUBLISH="false"
     - OFFICIAL_REPO_SLUG="DanySK/Thread-Inheritable-Resource-Loader-for-Java"
-    - echo this is a test to see if this is just a place where scripts are executed.
+    - DISABLE_WINDOWS_DEFENDER_TRICK=$(curl "${GRAVIS}.install-jdk-travis.sh" --output .install-jdk-travis.sh && source .install-jdk-travis.sh)
   matrix:
     - *reference_jdk
 matrix:
