Build in script (helps with caching)

--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,8 @@ jobs:
       install:
         - openssl aes-256-cbc -K $encrypted_c97e58f83f35_key -iv $encrypted_c97e58f83f35_iv -in prepare_environment.sh.enc -out prepare_environment.sh -d
         - bash prepare_environment.sh
-      script: true
+      script:
+        - ./gradlew compileJava
       after_success:
         - timeout 5m ./gradlew uploadArchives || killall -s 9 java
 workspaces:
