--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,7 @@ jobs:
       script:
         - ./gradlew compileJava
       after_success:
-        - timeout 5m ./gradlew uploadArchives || travis_terminate 0
+        - timeout 1 ./gradlew uploadArchives || travis_terminate 0
 workspaces:
   use:
     - reference-build
