--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,11 @@ env:
     - NO_WIN_DEFENDER=`curl "${GRAVIS}.disable-windows-defender.sh" --output .no-defender.sh && source .no-defender.sh`
   matrix:
     - *reference_jdk
+    - JDK="adopt-openj9@1.8"
+    - JDK="adopt@1.11"
+    - JDK="adopt-openj9@1.11"
+    - JDK="adopt@1.12"
+    - JDK="adopt-openj9@1.12"
 matrix:
   exclude:
     - os: *reference_os
@@ -57,7 +62,7 @@ jobs:
         - export ORG_GRADLE_PROJECT_signingKey=$(cat secrets.asc)
         - rm secrets.asc
       script:
-        - ./gradlew compileJava
+        - ./gradlew sign -x test
       after_success:
         - ./gradlew publishAllPublicationsToMavenRepository
 before_install:
