--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,10 @@ stages:
 env:
   global:
     - TERM=dumb
-    - GRAVIS="https://raw.githubusercontent.com/DanySK/Gravis-CI/master/"
+    - GRAVIS_REPO="https://github.com/DanySK/Gravis-CI.git"
+    - GRAVIS="$HOME/gravis"
     - PUBLISH="false"
     - OFFICIAL_REPO_SLUG="DanySK/Thread-Inheritable-Resource-Loader-for-Java"
-    - NO_WIN_DEFENDER=`curl "${GRAVIS}.disable-windows-defender.sh" --output .no-defender.sh && source .no-defender.sh`
   matrix:
     - *reference_jdk
     - JDK="adopt-openj9@1.8"
@@ -67,12 +67,11 @@ jobs:
         - travis_wait 40 ./gradlew publishAllPublicationsToMavenRepository
 before_install:
   - curl "${GRAVIS}.install-jdk-travis.sh" --output .install-jdk-travis.sh
-  - source .install-jdk-travis.sh
+  - source $GRAVIS/install-jdk
 script:
   - ./gradlew test
 before_cache:
-  - curl "${GRAVIS}.clean_gradle_cache.sh" --output .clean_gradle_cache.sh
-  - bash .clean_gradle_cache.sh
+  - $GRAVIS/clean-gradle-cache
 cache:
   directories:
     - $HOME/.gradle/caches/
