--- a/.travis.yml
+++ b/.travis.yml
@@ -66,7 +66,7 @@ jobs:
       after_success:
         - travis_wait 40 ./gradlew publishAllPublicationsToMavenRepository
 before_install:
-  - curl "${GRAVIS}.install-jdk-travis.sh" --output .install-jdk-travis.sh
+  - travis_retry git clone --depth 1 $GRAVIS_REPO $GRAVIS
   - source $GRAVIS/install-jdk
 script:
   - ./gradlew test
