--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 projectDescription = A thread-inheritable configurable resource loader. Parent thread can add elements to their classpath, and such elements will get inherited by their children, as far as the library is used correclty.
 systemProp.org.gradle.internal.http.connectionTimeout=500000
 systemProp.org.gradle.internal.http.socketTimeout=500000
+systemProp.org.gradle.internal.publish.checksums.insecure=true
