Do not filter out the initial check stage

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,11 +35,11 @@ env:
     - JDK="adopt-openj9@1.11"
     - JDK="adopt@"
     - JDK="adopt-openj9@"
-matrix:
+jobs:
   exclude:
     - os: *reference_os
       env: *reference_jdk
-jobs:
+      stage: test
   include:
     - stage: check
       name: "Deep check on reference OS and JDK"
